alb-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
       apps.kubernetes.io/name: alb-ingress-controller
    name: alb-ingress-controller
    namespace: kube-system
spec: 
  selector: 
    matchLabels:
     app.kubernetes.io/name: alb-ingress-controller
  template: 
    metadata: 
      labels: 
        app.kubernetes.io/name: alb-ingress-controller
    spec: 
      containers: 
        - name: alb-ingress-controller
          args:
          - --ingress-class=alb
          - --cluster-name=pathfinder
          - --aws-vpc-id=vpc-07fbf5415d7fff292
          - --aws-region=us-east-2
          image: docker.io/amazon/aws-alb-ingress-controller:v1.1.6
      serviceAccountName: alb-ingress-controller
