ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "eks-demo"
    namespace: "default"
    annotations:
       kubernetes.io/ingress.class: alb
       alb.ingress.kubernetes.io/scheme: internet-facing
       alb.ingress.kubernetes.io/target-type: ip
       alb.ingress.kubernetes.io/healthcheck-port: '3000'
       alb.ingress.kubernetes.io/healthcheck-listen-ports: '[{"HTTP": 80}]'
       alb.ingress.kubernetes.io/healthcheck-path: '/'
       alb.ingress.kubernetes.io/scheme: internet-facing
    labels:
       app: nginx
spec:
   spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port: 
              number: 8080
